<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LineAddItemWidget</class>
 <widget class="QWidget" name="LineAddItemWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>306</width>
    <height>152</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QFormLayout" name="formLayout">
   <property name="fieldGrowthPolicy">
    <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
   </property>
   <item row="0" column="0">
    <widget class="QLabel" name="x1Label">
     <property name="text">
      <string>X1</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QLineEdit" name="x1Edit"/>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="y1Label">
     <property name="text">
      <string>Y1</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QLineEdit" name="y1Edit"/>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="x2Label">
     <property name="text">
      <string>X2</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="QLineEdit" name="x2Edit"/>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="y2Label">
     <property name="text">
      <string>Y2</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <widget class="QLineEdit" name="y2Edit"/>
   </item>
   <item row="4" column="0" colspan="2">
    <widget class="QPushButton" name="pushButton">
     <property name="text">
      <string>Добавить отрезок</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
